# facial_expression_test

./: .gitignore  FaceExpressionDataset.py  README.md  collection.py  emotion_set.pth  emotion_set2.pth  main.py  model.py  pyproject.toml  train.py
