[project]
name = "camera-test"
version = "0.1.0"
description = ""
authors = [
    {name = "hasoncode",email = "harrison7adams@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (>=1.24.0,<2.5.0)",
    "mediapipe (>=0.10.31,<0.11.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "camera_test", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
